add: 添加用户注册功能
