# onlinePractice/models/init.go
@@ -1,12 +1,14 @@
 package models
 
 import (
+	"github.com/go-redis/redis/v8"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
 	"log"
 )
 
 var DB = Init()
+var RedisServer = InitRedis()
 
 func Init() *gorm.DB {
 	// 连接数据库
@@ -16,5 +18,23 @@ func Init() *gorm.DB {
 		log.Println("gorm Init error: ", err)
 	}
 
+	// 建表
+	if err := db.AutoMigrate(
+		&CategoryBasic{},
+		&ProblemBasic{},
+		&ProblemCategory{},
+		&SubmmitBasic{},
+		&UserBasic{},
+	); err != nil {
+		log.Println("gorm AutoMigrate error: ", err)
+	}
 	return db
+}
+
+func InitRedis() *redis.Client {
+	return redis.NewClient(&redis.Options{
+		Addr:     "192.168.239.100:6379",
+		Password: "ranzhou",
+		DB:       0, // use default DB
+	})
 }
